--- a/simulations_lesson.ipynb
+++ b/simulations_lesson.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1933025e",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8889b7d4",
    "metadata": {},
    "outputs": [],
@@ -230,21 +230,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "cfe12605",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.56523611, 0.76499886, 0.63471832, 0.5535794 , 0.55920716],\n",
-       "       [0.3039501 , 0.03081783, 0.43671739, 0.21458467, 0.40852864],\n",
-       "       [0.85340307, 0.23393949, 0.05830274, 0.28138389, 0.29359376],\n",
-       "       [0.66191651, 0.55703215, 0.78389821, 0.66431354, 0.40638686],\n",
-       "       [0.81402038, 0.16697292, 0.02271207, 0.09004786, 0.72235935]])"
+       "array([[0.77395605, 0.43887844, 0.85859792, 0.69736803, 0.09417735],\n",
+       "       [0.97562235, 0.7611397 , 0.78606431, 0.12811363, 0.45038594],\n",
+       "       [0.37079802, 0.92676499, 0.64386512, 0.82276161, 0.4434142 ],\n",
+       "       [0.22723872, 0.55458479, 0.06381726, 0.82763117, 0.6316644 ],\n",
+       "       [0.75808774, 0.35452597, 0.97069802, 0.89312112, 0.7783835 ]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,6 +252,33 @@
    "source": [
     "weeks = rng.random((1_000,5))\n",
     "weeks[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ca6ec6ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False,  True],\n",
+       "       [False, False, False, False, False],\n",
+       "       [False, False, False, False, False],\n",
+       "       ...,\n",
+       "       [False, False, False, False, False],\n",
+       "       [ True, False, False, False, False],\n",
+       "       [False, False, False, False, False]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weeks <= 0.1"
    ]
   },
   {
