--- a/simulation.ipynb
+++ b/simulation.ipynb
@@ -1983,6 +1983,219 @@
     "total_nonunique_forty = (unique_df_forty < 23).sum()\n",
     "total_nonunique_forty / len(unique_df_forty)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jul 31st Lesson Entry Ticket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 4],\n",
+       "       [1, 3],\n",
+       "       [3, 4],\n",
+       "       ...,\n",
+       "       [6, 5],\n",
+       "       [5, 3],\n",
+       "       [1, 5]])"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice_roll = rng.choice([1,2,3,4,5,6],(1000,2))\n",
+    "dice_roll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, False, False, False, False,  True, False,\n",
+       "       False, False,  True, False, False,  True, False, False, False,\n",
+       "       False, False, False, False,  True,  True, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "        True, False, False, False, False, False, False, False,  True,\n",
+       "       False, False, False, False, False, False, False, False,  True,\n",
+       "       False,  True, False, False,  True, False, False,  True, False,\n",
+       "       False,  True, False, False, False, False, False, False,  True,\n",
+       "       False, False, False, False, False, False, False,  True,  True,\n",
+       "        True, False, False, False, False, False, False, False, False,\n",
+       "       False, False, False,  True, False, False,  True, False, False,\n",
+       "       False, False, False, False, False,  True,  True, False, False,\n",
+       "       False, False,  True,  True, False, False, False, False,  True,\n",
+       "       False, False, False,  True, False,  True, False,  True, False,\n",
+       "       False,  True, False,  True,  True, False, False, False, False,\n",
+       "       False, False, False, False,  True, False, False,  True,  True,\n",
+       "       False, False,  True,  True, False, False, False, False, False,\n",
+       "        True, False, False, False, False, False, False, False,  True,\n",
+       "        True, False,  True,  True,  True, False, False, False,  True,\n",
+       "       False, False, False,  True, False, False, False, False,  True,\n",
+       "       False, False, False, False, False,  True, False,  True,  True,\n",
+       "       False, False, False, False,  True, False,  True, False, False,\n",
+       "       False, False, False,  True, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False,  True,\n",
+       "       False, False, False, False,  True, False, False, False,  True,\n",
+       "       False, False, False,  True, False, False, False,  True, False,\n",
+       "       False, False,  True, False, False,  True, False, False, False,\n",
+       "       False,  True, False, False, False, False, False, False, False,\n",
+       "        True, False,  True, False,  True, False, False, False, False,\n",
+       "        True, False, False, False, False, False, False, False, False,\n",
+       "       False, False,  True,  True,  True, False, False, False, False,\n",
+       "        True,  True, False, False, False, False, False, False,  True,\n",
+       "        True, False, False, False,  True, False,  True,  True, False,\n",
+       "        True, False, False,  True,  True,  True, False,  True, False,\n",
+       "        True, False, False, False, False,  True,  True, False,  True,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False, False,  True, False,  True,  True, False, False, False,\n",
+       "       False,  True, False,  True, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False,  True, False, False,\n",
+       "       False, False,  True, False,  True, False, False, False, False,\n",
+       "       False, False, False, False, False, False,  True, False, False,\n",
+       "        True, False,  True, False,  True, False, False, False,  True,\n",
+       "       False, False, False, False, False, False, False, False,  True,\n",
+       "        True, False,  True, False, False, False,  True, False, False,\n",
+       "       False,  True, False, False, False, False,  True, False, False,\n",
+       "       False, False, False,  True, False, False, False, False, False,\n",
+       "        True,  True, False, False, False,  True,  True, False, False,\n",
+       "       False, False,  True, False, False, False, False, False, False,\n",
+       "        True,  True,  True, False, False, False, False, False, False,\n",
+       "        True, False, False, False,  True, False, False,  True, False,\n",
+       "       False,  True, False,  True,  True, False,  True, False, False,\n",
+       "        True, False, False, False,  True,  True, False, False, False,\n",
+       "        True, False, False, False,  True, False, False, False, False,\n",
+       "       False, False, False, False, False,  True, False, False,  True,\n",
+       "       False,  True, False,  True, False, False,  True, False,  True,\n",
+       "       False, False, False, False, False, False, False,  True, False,\n",
+       "       False,  True, False, False, False,  True, False, False, False,\n",
+       "       False,  True, False,  True, False, False,  True, False,  True,\n",
+       "       False, False, False,  True, False, False, False, False,  True,\n",
+       "       False, False, False, False, False,  True,  True, False,  True,\n",
+       "       False, False,  True, False, False,  True,  True, False,  True,\n",
+       "       False, False,  True, False, False,  True, False, False,  True,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "        True, False, False, False,  True,  True, False,  True, False,\n",
+       "       False, False,  True, False,  True, False, False, False,  True,\n",
+       "       False,  True, False, False, False,  True, False, False, False,\n",
+       "       False,  True, False, False, False,  True, False,  True, False,\n",
+       "       False, False, False,  True, False, False, False, False, False,\n",
+       "        True, False,  True, False,  True, False, False, False, False,\n",
+       "       False, False, False, False, False,  True, False, False, False,\n",
+       "       False, False,  True, False, False,  True, False, False,  True,\n",
+       "       False, False,  True, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "       False,  True, False,  True, False,  True, False,  True, False,\n",
+       "       False, False, False, False,  True,  True, False, False,  True,\n",
+       "       False, False, False, False, False,  True, False, False, False,\n",
+       "       False, False, False, False, False, False,  True, False, False,\n",
+       "       False, False, False, False, False,  True, False, False, False,\n",
+       "       False,  True, False, False,  True, False, False, False, False,\n",
+       "       False, False, False, False, False, False,  True, False, False,\n",
+       "        True, False, False,  True,  True,  True, False,  True,  True,\n",
+       "       False, False,  True, False, False, False, False,  True, False,\n",
+       "       False,  True,  True, False,  True, False, False, False,  True,\n",
+       "        True, False,  True, False, False, False, False,  True,  True,\n",
+       "       False, False, False, False, False, False,  True, False,  True,\n",
+       "       False, False, False, False, False,  True, False, False, False,\n",
+       "       False, False, False, False, False, False, False,  True, False,\n",
+       "       False, False, False, False, False, False, False, False, False,\n",
+       "        True,  True, False,  True, False, False, False, False, False,\n",
+       "       False, False,  True, False, False, False, False, False, False,\n",
+       "       False, False, False, False, False, False, False,  True, False,\n",
+       "        True, False, False, False,  True, False, False, False,  True,\n",
+       "       False,  True, False, False,  True, False, False, False, False,\n",
+       "       False,  True, False, False, False,  True, False, False, False,\n",
+       "       False, False, False, False, False, False, False,  True,  True,\n",
+       "       False,  True, False, False,  True, False, False, False, False,\n",
+       "       False, False, False,  True,  True, False,  True, False, False,\n",
+       "       False, False, False,  True,  True, False, False, False, False,\n",
+       "       False, False, False, False, False,  True, False,  True, False,\n",
+       "       False, False, False, False, False,  True, False,  True,  True,\n",
+       "       False,  True, False, False, False, False, False, False, False,\n",
+       "       False, False, False,  True, False,  True,  True,  True, False,\n",
+       "       False, False, False, False,  True,  True,  True,  True,  True,\n",
+       "       False, False,  True, False, False, False, False, False, False,\n",
+       "       False, False, False,  True, False, False, False, False, False,\n",
+       "       False, False,  True, False,  True, False, False,  True, False,\n",
+       "       False,  True,  True, False,  True, False, False,  True, False,\n",
+       "       False, False, False, False,  True,  True, False, False, False,\n",
+       "       False,  True,  True, False, False, False,  True, False, False,\n",
+       "       False,  True, False, False, False, False, False, False, False,\n",
+       "        True, False, False, False,  True, False, False, False, False,\n",
+       "       False])"
+      ]
+     },
+     "execution_count": 259,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice_double = (dice_roll[:,0] % 2 == 0) & (dice_roll[:,1] % 2 == 0)\n",
+    "dice_double"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.252"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice_double.sum() / len(dice_roll)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.252"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice_double.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
