--- a/distributions_lesson.ipynb
+++ b/distributions_lesson.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import numpy as np\n",
     "from scipy import stats\n",
+    "from scipy.stats import poisson\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
